Update web meta description

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Paul - Web App Development Expert</title>
+    <title>Paul - A Full Stack Web Developer</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="Description" content="Paul Wei is a responsible full-stack web developer and UX/UI designer. Has more than 13 years experience in developing and designing web app.">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css?100" rel="stylesheet" type="text/css" media="all">
     <link href="css/app.css?8" rel="stylesheet" type="text/css" media="all">
@@ -24,7 +25,7 @@
       <div class="header-txt">
         <div class="head-icon"><img src="images/head_icon_180.jpg"/></div>
         <h1>Paul Wei</h1>
-        <h3>Web App Development Expert</h3>
+        <h3>A Full-Stack Web Developer</h3>
       </div>
       <div class="cover"></div>
       <span class="float-down-arrow icon-arrow-down" style="display: block;"></span>
@@ -33,7 +34,7 @@
       <div class="sub-section profile-section">
         <div id="profile" class="profile">
           <h2>Profile</h2>
-          <h5>I'm a responsible web App development expert and UX/UI designer.</h5>
+          <h5>I'm a responsible full-stack web developer and UX/UI designer.</h5>
           <div class="profile-table">
             <div class="left">
               <h6>About Me</h6>
