--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Description" content="Paul Wei is a responsible full-stack web developer and UX/UI designer. Has more than 13 years experience in developing and designing web app.">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css?100" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css?8" rel="stylesheet" type="text/css" media="all">
+    <link href="css/app.css?14" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="header-content" id="header-page-id">
@@ -122,6 +122,12 @@
         </div>
       </div>
     </div>
+    <div class="blog_content" id="">
+      <div class="blog_sub_content">
+        <div class="blog_header"></div>
+        <div class="blog_body"></div>
+      </div>
+    </div>
     <footer>
       <div class="footer-content">
         <div class="social-row">
@@ -131,9 +137,11 @@
         </div>
         <div class="license-row"> @ <span id="year"></span> amazingwei.com </div>
       </div>
-      <div id="redirect_to_header" class="redirect_to_header" style="display: none;"><a href="#"><span class="icon-circle-right"></span></a></div>
+      <div id="redirect_to_header" class="redirect_to_header" style="display: none;">
+        <a href="#"><span class="icon-circle-right"></span></a>
+      </div>
     </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/app-1.0.2.min.js"></script>
+  <script src="js/app.js"></script>
   </body>
 </html>
