--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="Description" content="Paul Wei is a responsible full-stack web developer and UX/UI designer. Has more than 13 years experience in developing and designing web app.">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link href="css/style.css?100" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css?14" rel="stylesheet" type="text/css" media="all">
+    <link href="css/style.css?101" rel="stylesheet" type="text/css" media="all">
+    <link href="css/app.css?18" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="header-content" id="header-page-id">
@@ -122,10 +122,16 @@
         </div>
       </div>
     </div>
-    <div class="blog_content" id="">
+    <div class="blog_content" id="blog_content_id" style="display: none;">
       <div class="blog_sub_content">
-        <div class="blog_header"></div>
-        <div class="blog_body"></div>
+        <a href="#" id="blog_close_id"><span class="icon-close"></span></a>
+        <div class="blog_header">
+          <img src="images/20.jpg"/>
+          <h4>Linux nohup command</h4>
+        </div>
+        <div class="blog_body">
+          <p>You process or executing shell script will get killed when logout from the session or network error occurred. You can use nohup to avoid this.</p>
+        </div>
       </div>
     </div>
     <footer>
