trigger esc keyup event to close blog window

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Description" content="Paul Wei is a responsible full-stack web developer and UX/UI designer. Has more than 13 years experience in developing and designing web app.">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css?101" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css?18" rel="stylesheet" type="text/css" media="all">
+    <link href="css/app.css?19" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="header-content" id="header-page-id">
@@ -123,7 +123,7 @@
       </div>
     </div>
     <div class="blog_content" id="blog_content_id" style="display: none;">
-      <div class="blog_sub_content">
+      <div class="blog_sub_content" id="blog_sub_content_id">
         <a href="#" id="blog_close_id"><span class="icon-close"></span></a>
         <div class="blog_header">
           <img src="images/20.jpg"/>
