--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Description" content="Paul Wei is a responsible full-stack web developer and UX/UI designer. Has more than 13 years experience in developing and designing web app.">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css?101" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css?35" rel="stylesheet" type="text/css" media="all">
+    <link href="css/app.css?39" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="header-content" id="header-page-id">
@@ -178,6 +178,6 @@
     </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery.nicescroll.min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app.js?13"></script>
   </body>
 </html>
