add spinner when loading blog detail

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Description" content="Paul Wei is a responsible full-stack web developer and UX/UI designer. Has more than 13 years experience in developing and designing web app.">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css?101" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css?9" rel="stylesheet" type="text/css" media="all">
+    <link href="css/app.css?10" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="header-content" id="header-page-id">
@@ -123,7 +123,11 @@
       </div>
     </div>
     <div class="blog_content" id="blog_content_id" style="display: none;">
-      <div class="blog_sub_content" id="blog_sub_content_id">
+      <div class="blog_sub_content">
+        <div class="blog_row">
+          <div class="blog_table" id="blog_sub_content_id"></div>
+          <div id="blog_spinner_id"><div class="icon-spinner"></div></div>
+        </div>
       </div>
     </div>
     <footer>
@@ -141,6 +145,6 @@
     </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery.nicescroll.min.js"></script>
-  <script src="js/app-1.0.3.min.js"></script>
+  <script src="js/app-1.0.4.min.js"></script>
   </body>
 </html>
