add function for js on qr page

--- a/qr/index.html
+++ b/qr/index.html
@@ -17,17 +17,17 @@
     <div class="header-container">
       <span>QR Code Generator</span>
       <div class="header-img-container">
-        <a href="http://www.amazingwei.com" class="home-img"><img src="../images/head_icon_180.jpg" /></a>
+        <a href="#" class="home-img visit_home"><img src="../images/head_icon_180.jpg" /></a>
       </div>
       <div class="header-content" >
         <div id="hamburger-menu" class=""><span></span><span></span><span></span> <p>Menu</p> </div>
         <div class="menu-content" id="main_menu_id" style="display: none; opacity: 0;">
           <ul>
-            <li><a href="#profile">Profile</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a class="home" href="#profile">Profile</a></li>
+            <li><a class="home" href="#portfolio">Portfolio</a></li>
+            <li><a class="home" href="#skills">Skills</a></li>
+            <li><a class="home" href="#blog">Blog</a></li>
+            <li><a class="home" href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -37,13 +37,13 @@
     <div class="sub-section">
       <div class="sub-title">
         <div class="sub-title-container">
-          <a href="">Profile</a>
-          <a href="">Portfolio</a>
-          <a href="">Skills</a>
-          <a href="">Blog</a>
-          <a href="">Contact</a>
+          <a class="home" href="#profile">Profile</a>
+          <a class="home" href="#portfolio">Portfolio</a>
+          <a class="home" href="#skills">Skills</a>
+          <a class="home" href="#blog">Blog</a>
+          <a class="home" href="#contact">Contact</a>
           <span class="contact_text">Who is?</span>
-          <span class="contact_link">Visit Site</span>
+          <span class="contact_link visit_home">Visit Site</span>
         </div>
       </div>
       <div id="qr-form-id" class="qr-form-page">
@@ -88,7 +88,7 @@
   </footer>
   <script src="../js/jquery-3.3.1.min.js"></script>
   <script src="../js/jquery.nicescroll.min.js"></script>
-  <script src="../js/qr.js?12"></script>
+  <script src="../js/qr.js?13"></script>
 </body>
 
 </html>
