add more for qr page

--- a/qr/index.html
+++ b/qr/index.html
@@ -9,7 +9,7 @@
     content="Paul Wei is a responsible full-stack web developer and UX/UI designer. Has more than 13 years experience in developing and designing web app.">
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <link href="../css/style.css?101" rel="stylesheet" type="text/css" media="all">
-  <link href="../css/app.css?102" rel="stylesheet" type="text/css" media="all">
+  <link href="../css/app.css?103" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body class="qr-body">
@@ -64,13 +64,17 @@
             </form>
           </div>
           <div class="qr-form-right">
-            <div class="form-img-container"><img src="../images/header-2.jpg" /></div>
+            <div class="form-img-container" id='img_cover_container_id'>
+              <div class="image_cover">&nbsp;</div>
+              <img src="../images/header-2.jpg" />
+            </div>
             <div class="white-bg">&nbsp;</div>
           </div>
           <div style="clear: both;"></div>
         </div>
       </div>
     </div>
+    <div id="cover_page_id" class="corver_page"></div>
   </div>
   <footer>
     <div class="footer-content">
@@ -88,6 +92,6 @@
   </footer>
   <script src="../js/jquery-3.3.1.min.js"></script>
   <script src="../js/jquery.nicescroll.min.js"></script>
-  <script src="../js/qr-1.0.0.min.js"></script>
+  <script src="../js/qr-1.0.1.min.js"></script>
 </body>
 </html>
