Add qr code page link in home page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="#skills">Skills</a></li>
           <li><a href="#blog">Blog</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a class="home" href="qr/">QR Code Generator</a></li>
         </ul>
       </div>
       <div class="header-bg" id="header-bg-id"></div>
