update personal experience

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="left">
               <h6>About Me</h6>
               <p>
-              Within the domain of web development, I have over 14 years of portfolio ranging from integration to back-end and front-end development making me a well rounded Full Stack developer. Using my experience of designing and developing websites and web applications, I have an excellent understanding of how technology can be used to align the requirements of both the business and the customer. My resume hosts a variety of projects tailored and catered to a diverse clientele, from big businesses to smaller companies. I am looking forward to new and challenging opportunities that will utilize my skills and add to my area of expertise. 
+              Within the domain of web development, I have over <span id='yearsNum'>16</span> years of portfolio ranging from integration to back-end and front-end development making me a well rounded Full Stack developer. Using my experience of designing and developing websites and web applications, I have an excellent understanding of how technology can be used to align the requirements of both the business and the customer. My resume hosts a variety of projects tailored and catered to a diverse clientele, from big businesses to smaller companies. I am looking forward to new and challenging opportunities that will utilize my skills and add to my area of expertise. 
               </p>
               <p>My goal is to meet interesting people from different fields and face the challenges of their businesses to achieve success.</p>
             </div>
@@ -146,6 +146,6 @@
     </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery.nicescroll.min.js"></script>
-  <script src="js/app-1.0.6.min.js"></script>
+  <script src="js/app-1.0.7.min.js"></script>
   </body>
 </html>
